# blogtato

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
crates/synctato/: CHANGELOG.md  Cargo.toml
demo/: demo.tape
meta/: items_.jsonl
perf/: bench.sh  inject_feeds.py  setup.py  sources.txt  validate.py
src/: git.rs  main.rs  query.rs  shorthand.rs  test_helpers.rs
src/commands/: add.rs  clone.rs  config.rs  export.rs  feed_export.rs  feed_ls.rs  import.rs  mod.rs  open.rs  pull.rs  remove.rs  show.rs  sync.rs
src/data/: index.rs  mod.rs
src/data/schema/: feed_item.rs  feed_source.rs  meta.rs  mod.rs  read_mark.rs
src/feed/: discover.rs  mod.rs  pull.rs  rss.rs
src/query/: grammar.rs  mod.rs  resolve.rs
tests/: integration.rs
