[package]
name = "blogtato"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A CLI RSS/Atom feed reader inspired by Taskwarrior"
repository = "https://github.com/kantord/blogtato"

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.102"
atom_syndication = "=0.12.7"
clap = { version = "=4.5.60", features = ["derive"] }
chrono = { version = "=0.4.44", features = ["serde"] }
git2 = "=0.20.4"
reqwest = { version = "=0.13.2", features = ["blocking"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
itertools = "=0.14.0"
rss = "=2.0.12"
paste = "=1.0.15"
sha2 = "=0.10.9"
url = "=2.5.8"
feedfinder = "=0.4.0"
dirs = "=6.0.0"
indicatif = "=0.18.4"
open = "=5.3.3"
rayon = "=1.11.0"
terminal_size = "=0.4.3"
unicode-width = "=0.2.2"
chumsky = "=0.12.0"

[dev-dependencies]
httpmock = "0.8"
tempfile = "3"
assert_cmd = "2"
libc = "0.2"
