[package]
name = "blogtato"
version = "0.1.18"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "A CLI RSS/Atom feed reader inspired by Taskwarrior"
repository = "https://github.com/kantord/blogtato"

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
synctato = "=0.1.11"
anyhow = "=1.0.102"
atom_syndication = "=0.12.7"
clap = { version = "=4.6.0", features = ["derive"] }
chrono = { version = "=0.4.44", features = ["serde"] }
ureq = "=3.2.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
toml = "=0.9.8"
itertools = "=0.14.0"
rss = "=2.0.12"
url = "=2.5.8"
regex = "=1.12.3"
dirs = "=6.0.0"
indicatif = "=0.18.4"
open = "=5.3.3"
rayon = "=1.11.0"
terminal_size = "=0.4.3"
unicode-width = "=0.2.2"
chumsky = "=0.12.0"
quick-xml = "=0.39.2"
url-normalize = "=0.1.1"

[dev-dependencies]
sha2 = "=0.10.9"
httpmock = "0.8"
tempfile = "3"
assert_cmd = "2"
libc = "0.2"
rusty-fork = "0.3"
rstest = "0.26"
