[package]
name = "synctato"
version = "0.1.8"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "A JSONL-based embedded database with sharding, transactions, and CRDT-style merge"
repository = "https://github.com/kantord/blogtato"

[dependencies]
anyhow = "=1.0.102"
chrono = { version = "=0.4.44", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
paste = "=1.0.15"
sha2 = "=0.10.9"
git2 = "=0.20.4"

[dev-dependencies]
tempfile = "3"
libc = "0.2"
rusty-fork = "0.3"
rstest = "0.26"
